quilt.cpp: fixes for msbuild targets
- remove errors in dependencies
- do not include file name in destination folder
- do not include database name in ODB file when we are only generating
  for a single database

--- a/projects/test_models/Zeta/cpp/src/msbuild.targets
+++ b/projects/test_models/Zeta/cpp/src/msbuild.targets
@@ -17,7 +17,7 @@
 
   ]-->
 
-  <Target Name="odb_Zeta">
+  <Target Name="odb_Zeta"
     <Message Importance="high" Text="ODB Zeta "/>
   </Target>
 
