--- a/projects/test_models/northwind/src/msbuild.targets
+++ b/projects/test_models/northwind/src/msbuild.targets
@@ -17,17 +17,17 @@
 
   ]-->
 
-  <Target Name="odb_northwind">
-          DependsOnTargets="odb_northwind_categories;,
-          DependsOnTargets="odb_northwind_class_0;,
-          DependsOnTargets="odb_northwind_customers;,
-          DependsOnTargets="odb_northwind_employees;,
-          DependsOnTargets="odb_northwind_order_details;,
-          DependsOnTargets="odb_northwind_order_details_key;,
-          DependsOnTargets="odb_northwind_orders;,
-          DependsOnTargets="odb_northwind_products;,
-          DependsOnTargets="odb_northwind_shippers;,
-          DependsOnTargets="odb_northwind_suppliers;,
+  <Target Name="odb_northwind"
+          DependsOnTargets="odb_northwind_categories;
+                            odb_northwind_class_0;
+                            odb_northwind_customers;
+                            odb_northwind_employees;
+                            odb_northwind_order_details;
+                            odb_northwind_order_details_key;
+                            odb_northwind_orders;
+                            odb_northwind_products;
+                            odb_northwind_shippers;
+                            odb_northwind_suppliers">
     <Message Importance="high" Text="ODB northwind "/>
   </Target>
 
@@ -36,99 +36,99 @@
     <Exec WorkingDirectory="$(OutputDirectory)" Command="&quot;$(OdbPath)&quot; -D_SECURE_SCL=0 $(OdbIncludeDirectories) --options-file $(MSBuildThisFileDirectory)odb/common_options.odb --options-file $(MSBuildThisFileDirectory)odb/categories_options.odb --output-dir $(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb $(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/types/categories.hpp" />
 <Move
         SourceFiles="$(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/categories-odb-pgsql.cxx"
-        DestinationFolder="$(MSBuildThisFileDirectory)odb/categories-odb-pgsql.cxx" />
+        DestinationFolder="$(MSBuildThisFileDirectory)odb/" />
 <Move
         SourceFiles="$(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/categories-odb-oracle.cxx"
-        DestinationFolder="$(MSBuildThisFileDirectory)odb/categories-odb-oracle.cxx" />
+        DestinationFolder="$(MSBuildThisFileDirectory)odb/" />
   </Target>
   <Target Name="odb_northwind_class_0">
     <Message Importance="high" Text="ODB class_0"/>
     <Exec WorkingDirectory="$(OutputDirectory)" Command="&quot;$(OdbPath)&quot; -D_SECURE_SCL=0 $(OdbIncludeDirectories) --options-file $(MSBuildThisFileDirectory)odb/common_options.odb --options-file $(MSBuildThisFileDirectory)odb/package/class_0_options.odb --output-dir $(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/package $(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/types/package/class_0.hpp" />
 <Move
         SourceFiles="$(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/package/class_0-odb-pgsql.cxx"
-        DestinationFolder="$(MSBuildThisFileDirectory)odb/package/class_0-odb-pgsql.cxx" />
+        DestinationFolder="$(MSBuildThisFileDirectory)odb/package/" />
 <Move
         SourceFiles="$(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/package/class_0-odb-oracle.cxx"
-        DestinationFolder="$(MSBuildThisFileDirectory)odb/package/class_0-odb-oracle.cxx" />
+        DestinationFolder="$(MSBuildThisFileDirectory)odb/package/" />
   </Target>
   <Target Name="odb_northwind_customers">
     <Message Importance="high" Text="ODB customers"/>
     <Exec WorkingDirectory="$(OutputDirectory)" Command="&quot;$(OdbPath)&quot; -D_SECURE_SCL=0 $(OdbIncludeDirectories) --options-file $(MSBuildThisFileDirectory)odb/common_options.odb --options-file $(MSBuildThisFileDirectory)odb/customers_options.odb --output-dir $(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb $(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/types/customers.hpp" />
 <Move
         SourceFiles="$(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/customers-odb-pgsql.cxx"
-        DestinationFolder="$(MSBuildThisFileDirectory)odb/customers-odb-pgsql.cxx" />
+        DestinationFolder="$(MSBuildThisFileDirectory)odb/" />
 <Move
         SourceFiles="$(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/customers-odb-oracle.cxx"
-        DestinationFolder="$(MSBuildThisFileDirectory)odb/customers-odb-oracle.cxx" />
+        DestinationFolder="$(MSBuildThisFileDirectory)odb/" />
   </Target>
   <Target Name="odb_northwind_employees">
     <Message Importance="high" Text="ODB employees"/>
     <Exec WorkingDirectory="$(OutputDirectory)" Command="&quot;$(OdbPath)&quot; -D_SECURE_SCL=0 $(OdbIncludeDirectories) --options-file $(MSBuildThisFileDirectory)odb/common_options.odb --options-file $(MSBuildThisFileDirectory)odb/employees_options.odb --output-dir $(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb $(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/types/employees.hpp" />
 <Move
         SourceFiles="$(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/employees-odb-pgsql.cxx"
-        DestinationFolder="$(MSBuildThisFileDirectory)odb/employees-odb-pgsql.cxx" />
+        DestinationFolder="$(MSBuildThisFileDirectory)odb/" />
 <Move
         SourceFiles="$(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/employees-odb-oracle.cxx"
-        DestinationFolder="$(MSBuildThisFileDirectory)odb/employees-odb-oracle.cxx" />
+        DestinationFolder="$(MSBuildThisFileDirectory)odb/" />
   </Target>
   <Target Name="odb_northwind_order_details">
     <Message Importance="high" Text="ODB order_details"/>
     <Exec WorkingDirectory="$(OutputDirectory)" Command="&quot;$(OdbPath)&quot; -D_SECURE_SCL=0 $(OdbIncludeDirectories) --options-file $(MSBuildThisFileDirectory)odb/common_options.odb --options-file $(MSBuildThisFileDirectory)odb/order_details_options.odb --output-dir $(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb $(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/types/order_details.hpp" />
 <Move
         SourceFiles="$(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/order_details-odb-pgsql.cxx"
-        DestinationFolder="$(MSBuildThisFileDirectory)odb/order_details-odb-pgsql.cxx" />
+        DestinationFolder="$(MSBuildThisFileDirectory)odb/" />
 <Move
         SourceFiles="$(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/order_details-odb-oracle.cxx"
-        DestinationFolder="$(MSBuildThisFileDirectory)odb/order_details-odb-oracle.cxx" />
+        DestinationFolder="$(MSBuildThisFileDirectory)odb/" />
   </Target>
   <Target Name="odb_northwind_order_details_key">
     <Message Importance="high" Text="ODB order_details_key"/>
     <Exec WorkingDirectory="$(OutputDirectory)" Command="&quot;$(OdbPath)&quot; -D_SECURE_SCL=0 $(OdbIncludeDirectories) --options-file $(MSBuildThisFileDirectory)odb/common_options.odb --options-file $(MSBuildThisFileDirectory)odb/order_details_key_options.odb --output-dir $(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb $(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/types/order_details_key.hpp" />
 <Move
         SourceFiles="$(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/order_details_key-odb-pgsql.cxx"
-        DestinationFolder="$(MSBuildThisFileDirectory)odb/order_details_key-odb-pgsql.cxx" />
+        DestinationFolder="$(MSBuildThisFileDirectory)odb/" />
 <Move
         SourceFiles="$(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/order_details_key-odb-oracle.cxx"
-        DestinationFolder="$(MSBuildThisFileDirectory)odb/order_details_key-odb-oracle.cxx" />
+        DestinationFolder="$(MSBuildThisFileDirectory)odb/" />
   </Target>
   <Target Name="odb_northwind_orders">
     <Message Importance="high" Text="ODB orders"/>
     <Exec WorkingDirectory="$(OutputDirectory)" Command="&quot;$(OdbPath)&quot; -D_SECURE_SCL=0 $(OdbIncludeDirectories) --options-file $(MSBuildThisFileDirectory)odb/common_options.odb --options-file $(MSBuildThisFileDirectory)odb/orders_options.odb --output-dir $(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb $(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/types/orders.hpp" />
 <Move
         SourceFiles="$(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/orders-odb-pgsql.cxx"
-        DestinationFolder="$(MSBuildThisFileDirectory)odb/orders-odb-pgsql.cxx" />
+        DestinationFolder="$(MSBuildThisFileDirectory)odb/" />
 <Move
         SourceFiles="$(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/orders-odb-oracle.cxx"
-        DestinationFolder="$(MSBuildThisFileDirectory)odb/orders-odb-oracle.cxx" />
+        DestinationFolder="$(MSBuildThisFileDirectory)odb/" />
   </Target>
   <Target Name="odb_northwind_products">
     <Message Importance="high" Text="ODB products"/>
     <Exec WorkingDirectory="$(OutputDirectory)" Command="&quot;$(OdbPath)&quot; -D_SECURE_SCL=0 $(OdbIncludeDirectories) --options-file $(MSBuildThisFileDirectory)odb/common_options.odb --options-file $(MSBuildThisFileDirectory)odb/products_options.odb --output-dir $(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb $(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/types/products.hpp" />
 <Move
         SourceFiles="$(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/products-odb-pgsql.cxx"
-        DestinationFolder="$(MSBuildThisFileDirectory)odb/products-odb-pgsql.cxx" />
+        DestinationFolder="$(MSBuildThisFileDirectory)odb/" />
 <Move
         SourceFiles="$(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/products-odb-oracle.cxx"
-        DestinationFolder="$(MSBuildThisFileDirectory)odb/products-odb-oracle.cxx" />
+        DestinationFolder="$(MSBuildThisFileDirectory)odb/" />
   </Target>
   <Target Name="odb_northwind_shippers">
     <Message Importance="high" Text="ODB shippers"/>
     <Exec WorkingDirectory="$(OutputDirectory)" Command="&quot;$(OdbPath)&quot; -D_SECURE_SCL=0 $(OdbIncludeDirectories) --options-file $(MSBuildThisFileDirectory)odb/common_options.odb --options-file $(MSBuildThisFileDirectory)odb/shippers_options.odb --output-dir $(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb $(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/types/shippers.hpp" />
 <Move
         SourceFiles="$(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/shippers-odb-pgsql.cxx"
-        DestinationFolder="$(MSBuildThisFileDirectory)odb/shippers-odb-pgsql.cxx" />
+        DestinationFolder="$(MSBuildThisFileDirectory)odb/" />
 <Move
         SourceFiles="$(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/shippers-odb-oracle.cxx"
-        DestinationFolder="$(MSBuildThisFileDirectory)odb/shippers-odb-oracle.cxx" />
+        DestinationFolder="$(MSBuildThisFileDirectory)odb/" />
   </Target>
   <Target Name="odb_northwind_suppliers">
     <Message Importance="high" Text="ODB suppliers"/>
     <Exec WorkingDirectory="$(OutputDirectory)" Command="&quot;$(OdbPath)&quot; -D_SECURE_SCL=0 $(OdbIncludeDirectories) --options-file $(MSBuildThisFileDirectory)odb/common_options.odb --options-file $(MSBuildThisFileDirectory)odb/suppliers_options.odb --output-dir $(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb $(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/types/suppliers.hpp" />
 <Move
         SourceFiles="$(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/suppliers-odb-pgsql.cxx"
-        DestinationFolder="$(MSBuildThisFileDirectory)odb/suppliers-odb-pgsql.cxx" />
+        DestinationFolder="$(MSBuildThisFileDirectory)odb/" />
 <Move
         SourceFiles="$(MSBuildThisFileDirectory)../include/dogen/test_models/northwind/odb/suppliers-odb-oracle.cxx"
-        DestinationFolder="$(MSBuildThisFileDirectory)odb/suppliers-odb-oracle.cxx" />
+        DestinationFolder="$(MSBuildThisFileDirectory)odb/" />
   </Target>
 </Project>
