--- a/projects/knitter/src/CMakeLists.txt
+++ b/projects/knitter/src/CMakeLists.txt
@@ -33,8 +33,8 @@ target_link_libraries(${name}
     options
     dia
     yarn
-    quilt
     quilt.cpp
+    quilt.csharp
     ${LIBXML2_LIBRARIES}
     ${Boost_LIBRARIES})
 
